<resources>
    <string name="app_name">LightLife</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="confirm_registry">Email not found. You want to create a new user with that email and password?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="home"><b>Home</b></string>
    <string name="listaProdotti"><b>Lista prodotti</b></string>
    <string name="add"><b>Aggiungi Prodotto</b></string>
    <string name="elencoOrdini"><b>Elenco ordini</b></string>
    <string name="AggiungiProdotto"><b>Aggiungi prodotto</b></string>
    <string name="titolo"><b>Titolo</b></string>
    <string name="prezzo"><b>Prezzo</b></string>
    <string name="descrizione"><b>Descrizione</b></string>
    <string name="form"><b>Compila il form</b></string>
    <string name="listaOrdini"><b>Lista Ordini</b></string>
    <string name="idOrdine"><b>Id ordine</b></string>
    <string name="cliente"><b>Cliente</b></string>
    <string name="prodotti"><b>Prodotti</b></string>
    <string name="data"><b>Data</b></string>
    <string name="immagine"><b>Immagine</b></string>
    <string name="titoloProdotto"><b>Titolo</b></string>
    <string name="prezzoProdotto"><b>€</b></string>
</resources>
