<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RelativeLayout"
        android:orientation="horizontal"
        android:id="@+id/LinearLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="20dp"
            android:textColor="#000000"
            android:text="@string/immagine"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titoloProdotto"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_marginLeft="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prezzoProdotto"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_marginLeft="35dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descrizione"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_marginLeft="28dp"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_below="@id/LinearLayout"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dividerHeight="7dp"
            android:id="@+id/ListView"/>
    </RelativeLayout>
</RelativeLayout>