<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RelativeLayout"
        android:layout_marginTop="10dp"
        android:id="@+id/LinearLayout"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="20dp"
            android:textColor="#000000"
            android:text="@string/idOrdine"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:textColor="#000000"
            android:text="@string/cliente"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:textColor="#000000"
            android:text="@string/prodotti"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:textColor="#000000"
            android:text="@string/data"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/LinearLayout">
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dividerHeight="7dp"
            android:id="@+id/ListViewOrdini"/>
    </RelativeLayout>

</RelativeLayout>