<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#00780e"
        android:layout_alignParentTop="true"
        android:id="@+id/RelativeLayout">
        <FrameLayout
            android:layout_centerVertical="true"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">
            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/homepage"
                android:onClick="homePage"/>
            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/logout"
                android:layout_marginLeft="70dp"
                android:onClick="logOut"/>
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Light Life"
            android:textSize="40dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textColor="#fff"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@id/RelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="30dp"
            android:id="@+id/TextViewForm"/>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextViewForm"
            android:layout_centerHorizontal="true"
            android:columnCount="2"
            android:rowCount="4"
            android:layout_marginTop="15dp"
            android:id="@+id/GridLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_marginTop="2dp"
                android:textColor="#000000"
                android:text="@string/titolo"/>
            <EditText
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:id="@+id/EditTextTitolo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:textSize="25dp"
                android:textColor="#000000"
                android:text="@string/prezzo"/>
            <EditText
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:id="@+id/EditTextPrezzo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textColor="#000000"
                android:text="@string/descrizione"
                android:layout_marginTop="15dp"/>
            <ScrollView>
                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/EditTextDescrizione"/>
            </ScrollView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="aggiungiFoto"
                android:src="@drawable/add"/>
            <ImageView
                android:id="@+id/ImgView"
                android:scaleType="fitCenter"
                android:onClick="zoomImage"
                android:layout_width="130dp"
                android:layout_height="130dp"/>
        </GridLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/GridLayout"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Aggiungi"
                android:onClick="confermaAggiuntaProdotto"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Azzera"
                android:onClick="azzeraForm"/>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>