<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageNegoziante">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#00780e"
        android:layout_alignParentTop="true"
        android:id="@+id/RelativeLayout">
        <FrameLayout
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">
            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/homepage"
                android:onClick="homePage"/>
            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/logout"
                android:layout_marginLeft="70dp"
                android:onClick="logOut"/>
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Light Life"
            android:textSize="40dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textColor="#fff"/>
    </RelativeLayout>
   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="90dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/listaprodotti"
            android:onClick="visualizzaListaProdotti"
            android:id="@+id/ImageButtonListaProdotti"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listaProdotti"
            android:textColor="#000000"
            android:textSize="20dp"
            android:layout_marginLeft="32dp"
            android:id="@+id/TextViewListaProdotti"
            android:layout_below="@id/ImageButtonListaProdotti"/>
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="90dp"
            android:layout_toRightOf="@id/ImageButtonListaProdotti"
            android:id="@+id/ImageButtonProdotto"
            android:src="@drawable/prodotto"
            android:onClick="aggiungiProdotto"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="#000000"
            android:textSize="20dp"
            android:layout_marginLeft="32dp"
            android:layout_toRightOf="@id/TextViewListaProdotti"
            android:layout_below="@id/ImageButtonProdotto"/>
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:id="@+id/ImageButtonOrdini"
            android:src="@drawable/ordini"
            android:layout_below="@id/TextViewListaProdotti"
            android:onClick="visualizzaOrdini"
            android:layout_marginLeft="110dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ImageButtonOrdini"
            android:text="@string/elencoOrdini"
            android:textColor="#000000"
            android:layout_marginLeft="110dp"
            android:textSize="20dp"
            />
    </RelativeLayout>

</RelativeLayout>